--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-binance-rs-async = { version = "1.3.3", features = ["rustls-tls"] }
+binance-rs-async = { version = "1.3.3", features = ["rustls-tls"], default-features = false }
 color-eyre = "0.6.2"
 crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
 env_logger = "0.11.2"
